--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.1.0",
     "loopback-connector-mysql": "^2.2.0",
+    "loopback-connector-cloudant": "^1.1.0",
     "loopback-datasource-juggler": "^2.39.0",
     "passport": "^0.3.2",
     "serve-favicon": "^2.0.1"
