--- a/server/model-config.json
+++ b/server/model-config.json
@@ -37,5 +37,13 @@
     "public": true,
     "$promise": {},
     "$resolved": true
+  },
+  "hospital": {
+    "dataSource": "cloudantdb",
+    "public": true
+  },
+  "doctor": {
+    "dataSource": "cloudantdb",
+    "public": true
   }
 }
