added patient model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -45,5 +45,13 @@
   "doctor": {
     "dataSource": "cloudantdb",
     "public": true
+  },
+  "patient": {
+    "dataSource": "cloudantdb",
+    "public": true
+  },
+  "clinic": {
+    "dataSource": "cloudantdb",
+    "public": true
   }
 }
